<resources>
    <string name="app_name">week1_0706011910003</string>
    <string name="list_users">List of Users</string>
    <string name="tool_add">Add User</string>
    <string name="name">Full Name</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="button_save" />
    <string name="button_save_data">Save Data</string>
    <string name="detail">User Details</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="nodata">No Data</string>
    <string name="yearsold">years old</string>
</resources>